--- a/shop.html
+++ b/shop.html
@@ -15,8 +15,8 @@
     <a href="#"><img class="logo" src="./img/logo.png" alt="" /></a>
     <div class="menu-items">
       <ul id="navbar">
-        <li><a class="active" href="home.html">Home</a></li>
-        <li><a href="shop.html">Shop</a></li>
+        <li><a  href="home.html">Home</a></li>
+        <li><a class="active" href="shop.html">Shop</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -32,39 +32,14 @@
     </div>
   </section>
 
-  <section id="hero">
-    <h4>Trade-in-offer</h4>
-    <h2>Super value deals</h2>
-    <h1>On all products</h1>
+  <section id="page-header">
+    
+    <h2>#stayhome</h2>
+   
     <p>Save more with coupons & up to 70% off</p>
-    <button>Shop Now</button>
+    
   </section>
-  <section id="feature" class="section-p1">
-    <div class="feature-box">
-      <img src="./img/features/f1.png" alt="" />
-      <h6>Free shipping</h6>
-    </div>
-    <div class="feature-box">
-      <img src="./img/features/f2.png" alt="" />
-      <h6>Free shipping</h6>
-    </div>
-    <div class="feature-box">
-      <img src="./img/features/f3.png" alt="" />
-      <h6>Free shipping</h6>
-    </div>
-    <div class="feature-box">
-      <img src="./img/features/f4.png" alt="" />
-      <h6>Free shipping</h6>
-    </div>
-    <div class="feature-box">
-      <img src="./img/features/f5.png" alt="" />
-      <h6>Free shipping</h6>
-    </div>
-    <div class="feature-box">
-      <img src="./img/features/f6.png" alt="" />
-      <h6>Free shipping</h6>
-    </div>
-  </section>
+  
 
   <section id="product1">
     <h2>Featured Product</h2>
@@ -201,11 +176,7 @@
     </div>
   </section>
 
-  <section id="banner">
-    <h4>Repair Services</h4>
-    <h2>Up to <span> 70% off </span> All t-shirts & Accessories</h2>
-    <button>Explore More</button>
-  </section>
+  
   <section id="product1">
     <h2>New Arrivals</h2>
     <p>Summer collection new modern</p>
@@ -340,34 +311,7 @@
       </div>
     </div>
   </section>
-  <section id="sm-banner" class="section-p1">
-    <div class="banner-box">
-      <h4>crazy deals</h4>
-      <h2>buy 1 get 1 free</h2>
-      <span> The best classic dress is on sale at cara </span>
-      <button class="white">Learn More</button>
-    </div>
-    <div class="banner-box banner-box2">
-      <h4>spring / summer</h4>
-      <h2>upcomming season</h2>
-      <span> The best classic dress is on sale at cara </span>
-      <button class="white">Collection</button>
-    </div>
-  </section>
-  <section id="banner3">
-    <div class="banner-box">
-      <h2>SEASONAL SALE</h2>
-      <h3>Winter Collection -50 % OFF</h3>
-    </div>
-    <div class="banner-box banner-box2">
-      <h2>NEW FOOTWEAR COLLECTION</h2>
-      <h3>Winter Collection -50 % OFF</h3>
-    </div>
-    <div class="banner-box banner-box3">
-      <h2>T-SHIRTS</h2>
-      <h3>Winter Collection -50 % OFF</h3>
-    </div>
-  </section>
+  
   <section id="newsletter">
     <div class="newstext">
       <h4>Sign up for newsletter</h4>
