--- a/shop.html
+++ b/shop.html
@@ -42,8 +42,7 @@
   
 
   <section id="product1">
-    <h2>Featured Product</h2>
-    <p>Summer collection new modern</p>
+    
     <div class="pro-container">
       <div class="pro">
         <img src="./img/products/f1.jpg" alt="" />
@@ -173,14 +172,11 @@
         </div>
         <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
       </div>
-    </div>
-  </section>
+  
 
   
-  <section id="product1">
-    <h2>New Arrivals</h2>
-    <p>Summer collection new modern</p>
-    <div class="pro-container">
+  
+
       <div class="pro">
         <img src="./img/products/n1.jpg" alt="" />
         <div class="des">
@@ -310,6 +306,11 @@
         <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
       </div>
     </div>
+  </section>
+  <section id="pagination">
+    <a href="#">1</a>
+    <a href="#">2</a>
+    <a href="#"><i class="fa fa-long-arrow-alt-right"></i></a>
   </section>
   
   <section id="newsletter">
