--- a/shop.html
+++ b/shop.html
@@ -43,7 +43,7 @@
 
   <section id="product1">
     
-    <div class="pro-container">
+    <div class="pro-container" onclick="window.location.href='singleproduct.html'">
       <div class="pro">
         <img src="./img/products/f1.jpg" alt="" />
         <div class="des">
