--- a/home.html
+++ b/home.html
@@ -206,139 +206,8 @@
     <h2>Up to <span> 70% off </span> All t-shirts & Accessories</h2>
     <button>Explore More</button>
   </section>
-  <section id="product1">
-    <h2>New Arrivals</h2>
-    <p>Summer collection new modern</p>
-    <div class="pro-container">
-      <div class="pro">
-        <img src="./img/products/n1.jpg" alt="" />
-        <div class="des">
-          <span>address</span>
-          <h5>Cartoon Astronaut T-shirts</h5>
-          <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-          </div>
-          <h4>2789 INR</h4>
-        </div>
-        <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
-      </div>
-      <div class="pro">
-        <img src="./img/products/n2.jpg" alt="" />
-        <div class="des">
-          <span>address</span>
-          <h5>Cartoon Astronaut T-shirts</h5>
-          <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-          </div>
-          <h4>3189 INR</h4>
-        </div>
-        <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
-      </div>
-      <div class="pro">
-        <img src="./img/products/n3.jpg" alt="" />
-        <div class="des">
-          <span>address</span>
-          <h5>Cartoon Astronaut T-shirts</h5>
-          <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-          </div>
-          <h4>2789 INR</h4>
-        </div>
-        <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
-      </div>
-      <div class="pro">
-        <img src="./img/products/n4.jpg" alt="" />
-        <div class="des">
-          <span>address</span>
-          <h5>Cartoon Astronaut T-shirts</h5>
-          <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-          </div>
-          <h4>3189 INR</h4>
-        </div>
-        <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
-      </div>
-      <div class="pro">
-        <img src="./img/products/n5.jpg" alt="" />
-        <div class="des">
-          <span>address</span>
-          <h5>Cartoon Astronaut T-shirts</h5>
-          <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-          </div>
-          <h4>2789 INR</h4>
-        </div>
-        <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
-      </div>
-      <div class="pro">
-        <img src="./img/products/n6.jpg" alt="" />
-        <div class="des">
-          <span>address</span>
-          <h5>Cartoon Astronaut T-shirts</h5>
-          <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-          </div>
-          <h4>3489 INR</h4>
-        </div>
-        <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
-      </div>
-      <div class="pro">
-        <img src="./img/products/n7.jpg" alt="" />
-        <div class="des">
-          <span>address</span>
-          <h5>Cartoon Astronaut T-shirts</h5>
-          <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-          </div>
-          <h4>3189 INR</h4>
-        </div>
-        <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
-      </div>
-      <div class="pro">
-        <img src="./img/products/n8.jpg" alt="" />
-        <div class="des">
-          <span>address</span>
-          <h5>Cartoon Astronaut T-shirts</h5>
-          <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-          </div>
-          <h4>2789 INR</h4>
-        </div>
-        <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
-      </div>
-    </div>
+  <section id="cards">
+    
   </section>
   <section id="sm-banner" class="section-p1">
     <div class="banner-box">
